tests/test0149.ctr
'SINGLE_LANGUAGE'.

☞ a := ( 3 + 2.
